lots of updates

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -137,7 +137,7 @@ $gray: #dbd5e0;
  $info-color: $citrus;
 
 // We use these to control various global styles
-// $body-bg: $white;
+ $body-bg: #eaeaea;
 // $body-font-color: $jet;
  $body-font-family: $lato;
 // $body-font-weight: $font-weight-normal;
