--- a/scss/app.scss
+++ b/scss/app.scss
@@ -42,4 +42,7 @@
 
 @import "ui/nav";
 @import "ui/icon-fonts";
+@import "ui/grid";
 @import "ui/footer";
+@import "ui/images";
+@import "models/exhibitions";
