lots of changes

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -119,17 +119,28 @@ $lato: 'Lato', sans-serif;
 $blood-moon: #af5b3e;
 $cali-orange: #e77d24;
 $florida-orange: #e77d24;
-$mustard: #c8b92d;
-$citrus: #e6da59;
+$mustard: #c6b72d;
+$citrus: #e4d859;
 $lilac: #7a6a82;
 $dark-lilac: #493d51;
 $perfect-teal: #459b97;
 $grayest: #5e5e5e;
 $artspace-floor: #dbd5e0;
-$gray: #dbd5e0;
+//$gray: #dbd5e0;
+
+/// New Colors
+$hot-orange: #f75421;
+$orange: #e57d24;
+$orange-l1: #e8a623;
+$deep-orange: #ad5b3e;
+$dark: #3f3938;
+$gray: #726f6f;
+$gray-l1: #c9c9c9;
+$gray-l2: #e2e2e2;
+
 
 // We use these as default colors throughout
- $primary-color: $lilac;
+ $primary-color: $hot-orange;
  $secondary-color: $florida-orange;
  $alert-color: $citrus;
  $success-color: $perfect-teal;
@@ -137,8 +148,8 @@ $gray: #dbd5e0;
  $info-color: $citrus;
 
 // We use these to control various global styles
- $body-bg: #eaeaea;
-// $body-font-color: $jet;
+ $body-bg: transparent;
+ $body-font-color: $dark;
  $body-font-family: $lato;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
@@ -211,7 +222,7 @@ $gray: #dbd5e0;
  $header-font-family: $lato;
  $header-font-weight: 700;
 // $header-font-style: normal;
-// $header-font-color: $jet;
+ $header-font-color: $dark;
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
 // $header-bottom-margin: .5rem;
@@ -1378,10 +1389,10 @@ $gray: #dbd5e0;
 
 // Background color for the top bar
 // $topbar-bg-color: $oil;
- $topbar-bg: $artspace-floor;
+ $topbar-bg: rgba(white, 0.8);
 
 // Height and margin
- $topbar-height: rem-calc(78);
+ $topbar-height: rem-calc(60);
 // $topbar-margin-bottom: 0;
 
 // Controlling the styles for the title in the top bar
@@ -1389,8 +1400,8 @@ $gray: #dbd5e0;
 // $topbar-title-font-size: rem-calc(17);
 
 // Style the top bar dropdown elements
-// $topbar-dropdown-bg: $oil;
- $topbar-dropdown-link-color: $grayest;
+ $topbar-dropdown-bg: transparent;
+ $topbar-dropdown-link-color: #3f3938;
 // $topbar-dropdown-link-bg: $oil;
 // $topbar-dropdown-link-bg-hover: $oil;
 // $topbar-dropdown-link-weight: $font-weight-normal;
@@ -1399,7 +1410,7 @@ $gray: #dbd5e0;
 // $topbar-dropdown-toggle-alpha: 0.4;
 
 // Set the link colors and styles for top-level nav
- $topbar-link-color: $grayest;
+ $topbar-link-color: #3f3938;
  $topbar-link-color-hover: $lilac;
 // $topbar-link-color-active: $white;
 // $topbar-link-color-active-hover: $white;
@@ -1408,7 +1419,7 @@ $gray: #dbd5e0;
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
 // $topbar-link-bg: $topbar-bg;
  $topbar-link-bg-color-hover: $dark-lilac;
- $topbar-link-bg-hover: $dark-lilac;
+ $topbar-link-bg-hover: white;
 // $topbar-link-bg-active: $primary-color;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
