--- a/scss/ui/_grid.scss
+++ b/scss/ui/_grid.scss
@@ -1,10 +1,13 @@
+.inner-wrap{
+	background-position: top center;
+	background-repeat: no-repeat;
+}
 .left-col, .side-menu{
 	background: #e4e4e4;
 }
 .right-col{
 	background: white;
 	color: #5e5e5e;
-	padding-top: 1.5rem;
 	
 	h1,h2,h3,h4,h5,p{
 		color: #5e5e5e;
@@ -13,4 +16,10 @@
 
 .row.main-content{
 
+}
+.adjusted-side{
+	background: #e2e2e2;
+}
+.content-box{
+	padding-top: 7rem;
 }
