--- a/scss/ui/_helpers.scss
+++ b/scss/ui/_helpers.scss
@@ -1,5 +1,17 @@
 section.container {
-  background: #eeeeee url(../images/artspace_background-main.png) no-repeat;
-  background-size: 100%;
-  background-position: center bottom;
+  background: transparent;
 }
+
+// Vertical Centering
+.vcenter-container {
+   position: relative;
+  .vcenter-content{
+  	width: 100%;
+   	margin: 0;
+   	position: absolute;              
+   	top: 50%;                        
+   	transform: translate(0, -50%);
+   	-webkit-transform: translate(0, -50%);
+   	-moz-transform: translate(0,50%);
+   }
+}   
