lots of changes

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -305,7 +305,7 @@ $gray-l2: #e2e2e2;
 // We use these to style blockquotes
 // $blockquote-font-color: scale-color($header-font-color, $lightness: 35%);
 // $blockquote-padding: rem-calc(9 20 0 19);
-// $blockquote-border: 1px solid $gainsboro;
+ $blockquote-border: 0px solid transparent;
 // $blockquote-cite-font-size: rem-calc(13);
 // $blockquote-cite-font-color: scale-color($header-font-color, $lightness: 23%);
 // $blockquote-cite-link-color: $blockquote-cite-font-color;
